Used MDN to add tags to index.html

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Squirrels and Cats</title>
   </head>
   <body>
   <h1>Hello Squirrels!</h1>
+    <p>Cats would almost certainly hunt squirrels given the chance.
+    <hr />
+    Cat's are known for their <em>hunting prowess</em> as well as their need for exercise. They use scratching posts to keep their claws sharp, and this is why if they don't have a scratching post, they'll <strong>make do with the couch!</strong>
+    </p>
+
+    <p>And here's some more things about cats:</p>
+    <ol>
+      <li>Cats are similar, but different, from a complex sentence:
+        <ul>
+          <li>Cats have claws at the end of their paws</li>
+        </ul>
+        <ul>
+          <li>Complex sentences have a pause at the end of their clause</li>
+        </ul>
+      </li>
+      <li>A cat's teeth are hella sharp when they're kittens</li>
+    </ol>
+
+
   </body>
 </html>
