--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -7,7 +7,7 @@
   <h1>Hello Squirrels!</h1>
     <p>Cats would almost certainly hunt squirrels given the chance.
     <hr />
-    Cat's are known for their <em>hunting prowess</em> as well as their need for exercise. They use scratching posts to keep their claws sharp, and this is why if they don't have a scratching post, they'll <strong>make do with the couch!</strong>
+    <p>Cat's are known for their <em>hunting prowess</em> as well as their need for exercise. They use scratching posts to keep their claws sharp, and this is why if they don't have a scratching post, they'll <strong>make do with the couch!</strong>
     </p>
 
     <p>And here's some more things about cats:</p>
@@ -23,6 +23,6 @@
       <li>A cat's teeth are hella sharp when they're kittens</li>
     </ol>
 
-
+    <p>If you'd like to learn meow about cats, you can do so by clicking <a href="http://www.catsthemusical.com/" target="_blank">here</a>. Please note that this will direct you away from this page and open in a new tabby.</p>
   </body>
 </html>
