--- a/html/table_practice.html
+++ b/html/table_practice.html
@@ -4,7 +4,7 @@
     <title>Table Practice</title>
   </head>
   <body>
-    <table>
+    <table border=1>
       <tr>
         <th>Programming Languages</th>
         <th>Description</th>
@@ -22,5 +22,26 @@
         <td>A dynamic, object-oriented, general purpose scripting language that is a favorite among new programmers because of it's simple syntax that makes it easy to learn, and because it is in high demand in the the tech industry.</td>
       </tr>
     </table>
+    <hr />
+    <table border=1>
+    <tr>
+      <th>6 pm</th>
+      <th>7 pm</th>
+      <th>8 pm</th>
+    </tr>
+    <tr>
+      <td colspan=2>Presidential Debate</td>
+      <td>Evening News</td>
+    </tr>
+    <tr>
+      <td rowspan="2">Football</td>
+      <td>Modern Family</td>
+      <td>The Mindy Project</td>
+    </tr>
+    <tr>
+      <td>Comedy</td>
+      <td>Drama</td>
+    </tr>
+</table>
   </body>
 </html>
