--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -9,8 +9,8 @@
 
 		<footer>
 			<ul>
-			<li><a href="product_details.html">Home</a></li>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="product_details.html">Product Details</a></li>
 				<li><a href="legal/waiver.html">Waiver</a></li>
 			</ul>
 		</footer>
