--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -13,7 +13,7 @@
     <ul>
       <li><a href="../index.html">Home</a></li>
       <li><a href="../contact.html">About</a></li>
-      <li><a href="///product_details.html">Product Details</a></li>
+      <li><a href="../product_details.html">Product Details</a></li>
     </ul>
   </footer>
 </body>
