updated form action pointed to success.html

--- a/html/forms/practice-forms.html
+++ b/html/forms/practice-forms.html
@@ -5,7 +5,7 @@
     <title>Practice Form</title>
   </head>
   <body>
-    <form action="https://httpbin.org/post" method="post"> <!-- When done testing, replace with action="success.html"-->
+    <form action="success.html" method="post"> <!-- When done testing, replace with action="success.html"-->
       <fieldset>
         <legend>Basic Information</legend>
         <div>
