--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -3,11 +3,11 @@
 <head>
   <title>Resume</title>
   <!-- We're using Google Fonts, which you can also do on your sites, but you don't need to know how for any assessments in this unit. -->
-  <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
-  
+  <link href='styles/practice.css' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
-  <h1 id="resume-title">Resume for Imogen Ary-Perrson</h1>
+  <h1 id="resume-title">Resume for <a id="name" title="Hire me!">Imogen Ary-Perrson</a></h1>
   <section id="personal-objective">
     <h2>Personal Objective</h2>
     <p>I want to become the kind of employee who contributes to her team, champions projects that will add value for the customer, remains humble and introspective, and can pay rent.</p>
@@ -22,7 +22,7 @@
     <h2 class="experience-category">Relevant Work Experience</h2>
     <section class="job">
       <h3>General Practitioner, The Circus</h3>
-      <ul>
+      <ul class="accomplishments">
         <li>Wrangled flaming hula hoops</li>
         <li>Served as first assistant to trapeze team</li>
         <li class="featured">Provided quality assurance for cotton candy</li>
@@ -30,7 +30,7 @@
     </section>
     <section class="job">
       <h3>Wildlife Wrangler, The Zoo</h3>
-      <ul>
+      <ul class="accomplishments">
         <li>Trained entire dancing seal troupe</li>
         <li>Regularly chased down escaped tigers</li>
         <li class="featured">Saved a small child from a hungry horse</li>
@@ -38,7 +38,7 @@
     </section>
     <section class="job">
       <h3>Cone Dipper, Imogen's Ice Cream Shack</h3>
-      <ul>
+      <ul class="accomplishments">
         <li>Dipped ice cream cones in flavored wax</li>
         <li class="featured">Was employee of the month 12 times a year</li>
         <li>Was the only employee</li>
