--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -1,10 +1,92 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<head>
+	<meta charset="utf-8">
+	<title>Article Title</title>
+</head>
+<body>
+	<header>
+		<nav>
+			<h2>Navigation</h2>
+			<a href="#">Home</a>
+			<a href="#">Contact</a>
+		</nav>
+	</header>
 
-  </body>
+	<aside>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat.
+		</p>
+	</aside>
+
+	<article>
+		<h2>Article Title</h2>
+		<section>
+			<h3>Sub-heading</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</section>
+	</article>
+
+	<table border=1>
+	<tr>
+		<th>One</th>
+		<th>Two</th>
+		<th>Three</th>
+	</tr>
+
+	<tr>
+		<td>Apples</td>
+		<td rowspan="2">Bananas</td>
+		<td>Cats</td>
+	</tr>
+
+	<tr>
+		<td>Dogs</td>
+		<!-- <td>Eagles</td> -->
+		<td>Fish</td>
+	</tr>
+
+	<tr>
+		<td>Gorillas</td>
+		<td>Hyenas</td>
+		<td>Iguanas</td>
+	</tr>
+	</table>
+
+	<footer>
+		<nav>
+			<h2>Navigation</h2>
+			<a href="#">Home</a>
+			<a href="#">Contact</a>
+		</nav>
+	</footer>
+
+</body>
 </html>
+
+<!--
+What is the purpose of HTML5 semantic tags? Which ones do you see as most useful?
+
+    Semantic tags add screen readers, for visually impaired people. They also create a logical flow for your HTML layout that will aid other people looking at you code.
+
+What is the order the browser uses to display elements on a page?
+
+    HTML is rendered from top to bottom, first to last, However, depending on the styling for the page you can adjust the position and appearance of the elements.
+
+What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date?
+
+    It's good to know that text editors are deeply hackable to increase efficiency completing repetative tasks.
+
+What concept in this challenge was most difficult for you? How can you improve your understanding of this concept?
+
+    Working out the hierarchy of information with the semantic tags will take some time and experience for me to grok.
+
+-->
