--- a/web_dev/jquery/form.html
+++ b/web_dev/jquery/form.html
@@ -14,7 +14,11 @@
       <li>Broccoli</li>
       <li>Grapefruit</li>
     </ul>
-
+    <div id="newItemButton"><button id="showForm">new item</button></div>
+    <form id="newItemForm">
+      <input type="text" id="itemDescription" placeholder="Add description" />
+      <input type="submit" id="addButton" value="Add" />
+    </form>
     <script src="forms.js"></script>
   </body>
 </html>
