Used jQuery selectors, and actions to add items to a lists.

--- a/web_dev/jquery/form.html
+++ b/web_dev/jquery/form.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>jQuery Form</title>
-    <script src="jquery-3.11.min.js"></script>
+    <script src="jquery-3.1.1.min.js"></script>
   </head>
   <body>
     <h1 id="header">List</h1>
@@ -16,9 +16,9 @@
     </ul>
     <div id="newItemButton"><button id="showForm">new item</button></div>
     <form id="newItemForm">
-      <input type="text" id="itemDescription" placeholder="Add description" />
+      <input type="text" id="itemDescription" placeholder="Add item" />
       <input type="submit" id="addButton" value="Add" />
     </form>
-    <script src="forms.js"></script>
+    <script src="form.js"></script>
   </body>
 </html>
